# VitaGrafix

./: .gitignore  CMakeLists.txt  README.md  VitaGrafix.yml  config.c  config.h  display.c  display.h  games.c  games.h  io.c  io.h  log.c  log.h  main.c  main.h  osd.c  osd.h  osd_font.h  osd_logo.h  patch.c  patch.h  patch_gens.c  patch_gens.h  patch_hooks.c  patch_hooks.h  patch_tools.c  patch_tools.h  patchlist.txt  tools.c  tools.h
src/: config.c  config.h  io.c  io.h  log.c  log.h  main.c  main.h  osd.c  osd.h  osd_font.h  osd_logo.h  patch.c  patch.h  patch_hook.c  patch_hook.h
src/interpreter/: interpreter.c  interpreter.h  legacy.c  legacy.h  op.h  op_datatype.c  op_encode.c  op_math.c  op_vitagrafix.c  parser.c  parser.h
tests/: Makefile  main.c  test_interpreter.c
